--- a/oser-app/src/sass/_variables.scss
+++ b/oser-app/src/sass/_variables.scss
@@ -5,3 +5,4 @@ $color-purple: rgb(99, 92, 161);
 $color-purple-light: rgb(151, 146, 192);
 $color-light-blue: rgb(213, 250, 255);
 $color-accent: rgb(243, 57, 94);
+$color-light-gray: #f6f6f6;
