--- a/oser-app/src/sass/styles.scss
+++ b/oser-app/src/sass/styles.scss
@@ -8,6 +8,7 @@
 body {
   margin: 0;
   font-family: 'Nunito', Arial, sans-serif;
+  color: #222;
 }
 
 h1, h2, h3, h4, h5, h6 {
